# human_robot_red_teaming

./: .gitignore  CMakeLists.txt  README.md  ablation_saturation_experiments.ipynb  chatbot_hrrting.ipynb  hrrt.ipynb  hrrt_testing.ipynb  model_ablation_saturation_evaluation.ipynb  model_planning_evaluation.ipynb  package.xml
config/: experiment_summary_results.txt
config/cinematic_iron_giant/: model0.pddl  model0.yaml  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/cinematic_iron_giant/chatgpt_raw/: model0_a_suggestions.txt  model0_b_updates.txt  model0_c_reflections.txt  model0_d_reflection_updates.txt  model1_a_suggestions.txt  model1_b_updates.txt  model1_c_reflections.txt  model1_d_reflection_updates.txt  model2_a_suggestions.txt  model2_b_updates.txt  model2_c_reflections.txt  model2_d_reflection_updates.txt  model3_a_suggestions.txt  (+7 more)
config/cinematic_space_odyssey/: model0.pddl  model0.yaml  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/clr/: consequence_states.yaml  risk_mitigating_actions.yaml  risk_mitigating_policy_data.yaml  risky_conditions.yaml  safety_conditions.yaml
config/everyday_international_travel/: knowledge_base.yaml  model0.pddl  model0.yaml  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/everyday_vehicle_diagnostics/: model0.pddl  model0.yaml  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/household_assembly_repairs/: model0.pddl  model0.yaml  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/household_cleaning/: model0.pddl  model0.yaml  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/lunar_habitat_airlock/: knowledge_base.yaml  model0.yaml  model0_hrrt2.yaml  model0_hrrt4.yaml  model1.yaml
config/space_lunar_habitat_airlock/: model0.pddl  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/space_mars_science_team/: model0.pddl  model0.yaml  model1.pddl  model1.yaml  model2.pddl  model2.yaml  model3.pddl  model3.yaml  model4.pddl  model4.yaml  model5.pddl  model5.yaml  model5_ordered_by_iteration.pddl  planning_results.txt
config/space_mars_science_team_ablation_saturation/: experiment_summary_results.txt  model00.pddl  model01_level2.pddl  model01_level3.pddl  model01_level4.pddl  model02_level2.pddl  model02_level3.pddl  model02_level4.pddl  model03_level2.pddl  model03_level3.pddl  model03_level4.pddl  model04_level2.pddl  model04_level3.pddl  model04_level4.pddl  model05_level2.pddl  model05_level3.pddl  model05_level4.pddl  model06_level2.pddl  model06_level3.pddl  model06_level4.pddl  model07_level2.pddl  model07_level3.pddl  model07_level4.pddl  model08_level2.pddl  model08_level3.pddl  model08_level4.pddl  model09_level2.pddl  model09_level3.pddl  model09_level4.pddl  model10_level2.pddl  model10_level3.pddl  model10_level4.pddl  planning_results_tasks_001_025.txt  planning_results_tasks_026_050.txt  planning_results_tasks_051_075.txt  planning_results_tasks_076_100.txt  planning_results_tasks_101_125.txt  planning_results_tasks_126_150.txt  planning_results_tasks_151_175.txt  planning_results_tasks_176_200.txt
config/val/: consequence_states.yaml  risk_mitigating_actions.yaml  risk_mitigating_policy_data.yaml  risky_conditions.yaml  safety_conditions.yaml
data/clr/: counter_factual_policy_data.yaml  red_teamed_risk_mitigating_policy_data.yaml
data/val/: counter_factual_policy_data.yaml  red_teamed_risk_mitigating_policy_data.yaml
data/val_clr/: red_teamed_risk_mitigating_policy_data.yaml
docs/: chatgpt_notes.md  data_readers.md  pyperplan_notes.md  red_team_data_generation.md  robot_specific_knowledge.md  ticket_todos.md
launch/: consequence_state_reader.launch  process_safety_conditions.launch  red_team_counter_factual_data_extension.launch  red_team_data_extension.launch  red_team_risky_scenario_data_extension.launch  risky_condition_reader.launch  val_clr_specific_knowledge.launch
sar/: CMakeLists.txt
sar/docs/: robot_specific_knowledge.md  ticket_todos.md
sar/launch/: counter_factual_policy_data_reader.launch  data_processing.launch  risk_mitigating_action_reader.launch  risk_mitigating_policy_data_reader.launch
sar/scripts/: consequence_state.py  consequence_state_reader.py  counter_factual_policy_data_reader.py  data_processing.py  policy_data_point.py  red_team_policy.py  risk_mitigating_action_reader.py  risk_mitigating_policy_data_reader.py  risky_condition_reader.py  val_clr_specific_knowledge.py
scripts/: counter_factual_policy_data_point.py  counter_factual_policy_data_reader.py  data_processing.py  domain_specific_knowledge.py  hrrt2.py  hrrt3.py  hrrt4.py  likelihood_consequence_risk.py  logistic_regression_analysis.py  red_team_command_line_tools.py  red_team_data_extension.py  red_team_policy.py  risk_mitigating_action.py  risk_mitigating_action_reader.py  risk_mitigating_policy_data_point.py  risk_mitigating_policy_data_reader.py  risky_condition.py  risky_condition_reader.py  safety_condition.py  safety_condition_reader.py  test.py  val_clr_specific_knowledge.py  yaml_formatting_checks.py  yaml_state_action_space_checks.py
srv/: CounterFactualDataGeneration.srv  RiskyScenarioDataGeneration.srv
(+939 files in other folders)
