<?xml version="1.0"?>
<package format="2">
  <name>safety_aware_reasoning</name>
  <version>0.0.0</version>
  <description>Package for modeling and reasoning over safety, risk, and risk mitigating actions for different robots and environments.</description>

  <maintainer email="esheetz@umich.edu">Emily Sheetz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <exec_depend>message_runtime</exec_depend> -->

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>std_msgs</depend> -->
</package>
